--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion '27.0.3'
 
     defaultConfig {
-        applicationId "com.snatik.matches"
+        applicationId "de.rafaelmiranda.memory"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1006
