--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,14 @@
     package="de.rafaelmiranda.memory">
 
     <uses-sdk android:targetSdkVersion="21" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name="de.rafaelmiranda.memory.GameApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppFullScreenTheme">
         <activity
             android:name="de.rafaelmiranda.memory.MainActivity"
